# 5G2U

./: README.md
5G-K/5GURLLC-simsys/VS Project_NRuRLLC System Level Simulation/: VS Project_NRuRLLC System Level Simulation.vcxproj  VS Project_NRuRLLC System Level Simulation.vcxproj.filters
FM/FM-A/: CMakeLists.txt
FM/FM-A/cpp_src/: ana_refile.cpp  exe_refile.cpp
FM/FM-A/open62541_ts/: open62541.c  open62541.h
FM/FM-A/src/: A-Server.c
FM/FM-CC/: PCP_tagger  Translator  ana_traffic.py
FM/FM-CC/cpp_src/: DL_bit_rate.cpp  PCP_tagger.cpp  RRC.cpp  RRC_SRLCC.cpp  RRC_SR_LCC.cpp  Translator.cpp  ana_refile.cpp  cal_traffic.cpp  exe_refile.cpp  traffic_heavy.cpp
FM/FM-M/: CMakeLists.txt
FM/FM-M/cpp_src/: refile.cpp
FM/FM-M/open62541/dir/: open62541.c
FM/FM-M/src/: M-Subscriber.c
FM/recording/: FMA_exe.txt  ts_5-4_Aserver.txt  ts_6-5_Msub.txt  ts_7-5_Aserver.txt  ts_7-5_CCserver.txt  ts_8-7_CCserver.txt  ts_9-8_CCserver.txt
FM/recording/comparison_plot/: plot_each.py  plotall.py
FM/recording/plot/: plot_all.py  plot_req.py  plot_resp.py  plot_sum.py
FM/recording/plot_avg/: demo_line.py  plot_A_line.py  plot_CC_line.py  plot_FM_avgbar.py  plot_M_line.py  plot_all_avgbar.py  plot_all_line.py  plot_all_line_ver2.py
WC/WC-A/: CMakeLists.txt
WC/WC-A/cpp_src/: refile.cpp
WC/WC-A/open62541/: open62541.c  open62541.h
WC/WC-A/src/: A-Client.c  AS-Client.c  CMakeCache.txt  Makefile  cmake_install.cmake
WC/WC-CC/: LCP.sh  WC_A_PBR.txt  WC_A_priority.txt  WC_GUI.py  WGCL.sh  capture.sh  cpu_heavyload.sh  pre_AW_WGCL.sh  pre_LCP.sh  wcmpacket.txt
WC/WC-CC/cpp_src/: PCP_tagger.cpp  (+10 more)
WC/WC-M/: CMakeLists.txt
WC/WC-M/cpp_src/: refile.cpp
WC/WC-M/open62541/WC-CC/: CMakeLists.txt  RRC_SRLCC  Tool_GUI.py  Translator  UL_bit_rate  WC_CC_PBR.txt  WC_CC_priority.txt  WC_M_PBR.txt  WC_M_priority.txt  ana_traffic_FM.txt  ana_traffic_WC.txt  cal_traffic  cpu_lightload.sh  pre_WGCL.sh  traffic_heavy  ttxt_pass.sh  txt_pass.sh
WC/WC-M/open62541/dir/: open62541.c  open62541.h
WC/WC-M/src/: M-Publisher.c
WC/recording/: FMCC_exe.txt  WCA_exe.txt  WCCC_exe.txt  WCM_exe.txt  ts_11-10_Aclient.txt  ts_11-10_CCclient.txt  ts_12-11_Aclient.txt  ts_12-11_CCclient.txt  ts_12-1_CCclient.txt  ts_2-1_Aclient.txt  ts_2-1_CCclient.txt  ts_2-1_Mpub.txt  ts_2-1_Mpub_demo.txt  ts_3-2_Aclient.txt  ts_3-2_CCclient.txt  ts_3-2_Mpub.txt  ts_3-2_Mpub_demo.txt  ts_5-4_CCserver.txt  ts_5-4_Msub.txt  ts_5-4_Msub_demo.txt  ts_6-5_Aserver.txt  ts_6-5_CCserver.txt  ts_6-5_Msub_demo.txt  ts_8-7_Aserver.txt  ts_9-8_Aserver.txt
WC/result/: test_interval  trans_time
(+186 files in other folders)
